[gd_scene load_steps=3 format=3 uid="uid://dabjlqsplkret"]

[ext_resource type="Script" uid="uid://bq23w52odlsr3" path="res://settings_panel.gd" id="1_qe5rj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0amem"]
bg_color = Color(0.197205, 0.308758, 0.323495, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.126, 0.2002, 0.21, 1)
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25
shadow_size = 7

[node name="SettingsPanel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qe5rj")

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="Panel" type="Panel" parent="MarginContainer2"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_0amem")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer2"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 15

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer2/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer2/MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 15

[node name="Setting_lbl" type="Label" parent="MarginContainer2/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "SETTINGS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer2/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 5

[node name="GameInfoToggle_btn" type="CheckButton" parent="MarginContainer2/MarginContainer/ScrollContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Hide Game Info"

[node name="ThemeOption_btn" type="OptionButton" parent="MarginContainer2/MarginContainer/ScrollContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
button_mask = 3
selected = 0
item_count = 4
popup/item_0/text = "Blue"
popup/item_0/id = 0
popup/item_1/text = "Red"
popup/item_1/id = 1
popup/item_2/text = "Pink"
popup/item_2/id = 2
popup/item_3/text = "Black"
popup/item_3/id = 3

[node name="Back_btn" type="Button" parent="MarginContainer2/MarginContainer/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "BACK"

[connection signal="item_selected" from="MarginContainer2/MarginContainer/ScrollContainer/VBoxContainer/VBoxContainer/ThemeOption_btn" to="." method="_on_theme_option_btn_item_selected"]
